fix: Woo/EDD Cart alignment issue with respect to Toggle Button.

--- a/assets/css/unminified/frontend.css
+++ b/assets/css/unminified/frontend.css
@@ -4369,6 +4369,29 @@ li.edd-custom-menu-item .ast-edd-site-header-cart span.astra-icon:after {
   }
 }
 
+/** Cart CSS */
+.ast-header-break-point.ast-woocommerce-cart-menu.astra-hfb-header .ast-site-header-cart {
+  padding: 0;
+}
+
+.ast-header-break-point.ast-woocommerce-cart-menu.astra-hfb-header .ast-cart-menu-wrap {
+  width: 2em;
+  height: 2em;
+  font-size: 1.4em;
+  line-height: 2;
+  vertical-align: middle;
+  text-align: right;
+}
+
+.ast-header-break-point .ast-edd-site-header-cart-wrap .ast-edd-cart-menu-wrap {
+  width: 2em;
+  height: 2em;
+  font-size: 1.4em;
+  line-height: 2;
+  vertical-align: middle;
+  text-align: right;
+}
+
 /*----------  Header  ----------*/
 /**
  * 	Header
