--- a/sass/site/builder/_header.scss
+++ b/sass/site/builder/_header.scss
@@ -1232,3 +1232,28 @@ li.edd-custom-menu-item{
 		}
 	}
 }
+
+/** Cart CSS */
+.ast-header-break-point {
+	&.ast-woocommerce-cart-menu.astra-hfb-header {
+		.ast-site-header-cart {
+			padding: 0;
+		}
+		.ast-cart-menu-wrap {
+			width: 2em;
+			height: 2em;
+			font-size: 1.4em;
+			line-height: 2;
+			vertical-align: middle;
+			text-align: right;
+		}
+	}
+	.ast-edd-site-header-cart-wrap .ast-edd-cart-menu-wrap {
+		width: 2em;
+		height: 2em;
+		font-size: 1.4em;
+		line-height: 2;
+		vertical-align: middle;
+		text-align: right;
+	}
+}
